--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,11 @@
   "description": "App para el control de gastos e ingresos de los jugadores de las diferentes ligas de Comunio registradas en la app.",
   "main": "index.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "polymerfire": "firebase/polymerfire#^2.1.0",
+    "paper-styles": "PolymerElements/paper-styles#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.1"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
